# amazon-q-developer-cli

./: Cargo.toml
crates/chat-cli/src/cli/agent/: mod.rs
crates/chat-cli/src/cli/chat/: mod.rs
crates/chat-cli/src/cli/chat/tools/: aws_context.rs  mod.rs  use_aws.rs
crates/chat-cli/src/database/: settings.rs
crates/q_windows_wrapper/: Cargo.toml  README.md  build.rs
crates/q_windows_wrapper/src/: main.rs
crates/q_windows_wrapper/tests/: integration_tests.rs
extensions/vscode/: README.md
